# fairline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  TOOLING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
docs/adr/: 0002-embeddings-triage-llm-writes-links.md
docs/architecture/: overview.md  plan.md
docs/architecture/archive/: plan.md
docs/architecture/decisions/: 0001-paper-first-live-gated.md  0002-embeddings-triage-llm-writes-links.md  0003-leakage-safe-wallet-scoring.md  0004-cross-venue-sameness-is-a-link-not-an-entity.md  0005-directional-ev-paper-only-experiment.md  0006-ingestion-behind-marketsource-cli-first.md  0007-baskets-specialism-filter-not-per-category-scores.md  0008-venue-kalshi-data-ibkr-execution.md  0009-prob-fn-interface-contract.md  0010-schema-extensions-kalshi-weather-backtest.md  0011-weather-data-source-iem-first-ndfd-deferred.md  0012-calibration-edge-room-brier-skill-gate.md  0013-wp7-hardening-audit-2026-07-21.md
docs/ops/: neon-setup.md
docs/product/: requirements.md  roadmap.md
docs/research/: 2026-07-11-polymarket-cli-and-ev-references.md  2026-07-17-polymarket-edge-landscape.md
schema/: 001_schema.sql  002_kalshi_ev.sql
src/: audit.py  backtest.py  calibration.py  detector.py  ev_detector.py  fees.py  ingest.py  ingest_kalshi.py  ingest_polymarket_cli.py  market_matcher.py  prob_fn.py  report.py  risk_execution.py  run_calibration.py  run_kalshi_ingest.py  run_weather_ingest.py  store.py  wallet_features.py  wallet_scoring.py  weather_ingest.py
tests/: test_backtest.py  test_calibration.py  test_ingest_kalshi.py  test_ingest_kalshi_qa_e2e.py  test_ingest_kalshi_qa_round3.py  test_ingest_kalshi_qa_round6.py  test_prob_fn.py  test_report_audit.py  test_risk_execution_consensus.py  test_risk_execution_killswitch.py  test_risk_execution_signal.py  test_store_persistence.py  test_store_persistence_qa_adversarial.py  test_wallet_basket_specialism.py  test_weather_ingest.py
tests/fixtures/iem/: daily_nyc_2026_06.json  mos_knyc_nbs.json
tests/fixtures/kalshi/: candlesticks_weather.json  event_single.json  events_mixed.json  events_settled.json  market_single.json  markets_resolved.json  orderbook.json
